<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/app_list_root" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView android:id="@+id/search_card" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:layout_marginStart="4dp" android:layout_marginEnd="0dp" app:layout_constraintEnd_toStartOf="@+id/sort" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:paddingLeft="8dp" android:paddingRight="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="8dp" android:paddingEnd="8dp">
            <ImageView android:id="@+id/back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/back" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/abc_ic_ab_back_material"/>
            <EditText android:textSize="18sp" android:id="@+id/search" android:background="@android:color/transparent" android:padding="12dp" android:layout_width="0dp" android:layout_height="wrap_content" android:hint="@string/search_hint" android:maxLines="1" android:inputType="text" android:imeOptions="actionSearch" android:importantForAutofill="no" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/clear" app:layout_constraintStart_toEndOf="@+id/back" app:layout_constraintTop_toTopOf="0"/>
            <ImageView android:id="@+id/clear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/clear_search" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_clear"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <ImageView android:id="@+id/sort" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginRight="4dp" android:contentDescription="@string/sort_search" android:layout_marginStart="4dp" android:layout_marginEnd="4dp" app:layout_constraintBottom_toBottomOf="@+id/search_card" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/search_card" app:layout_constraintTop_toTopOf="@+id/search_card" app:tint="?attr/colorControlNormal"/>
    <TextView android:id="@+id/hiddenAppNotice" android:padding="4dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginRight="4dp" android:text="@string/app_list_results_hidden_antifeature_settings" android:drawablePadding="4dp" android:layout_marginStart="4dp" android:layout_marginEnd="4dp" app:drawableStartCompat="@drawable/ic_error" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/search_card"/>
    <TextView android:id="@+id/empty_state" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty_search_available_app_list" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/hiddenAppNotice" style="@style/AppListEmptyText"/>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/app_list" android:visibility="visible" android:scrollbars="vertical" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/hiddenAppNotice"/>
</androidx.constraintlayout.widget.ConstraintLayout>
